--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,161 @@
-/* ./assets/images/bg-pattern-intro-mobile.svg */
+/* FONT */
+
+
+/* HEADER */
+#hero {
+    background-image: url(../images/bg-pattern-intro-mobile.svg);
+    background-size: cover;
+    background-position: center;
+    height: 70vh;
+    background-color: #FF4D5B;
+    border-radius: 0 0 0 5rem;
+}
+
+.hero-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5rem 2rem;
+}
+
+.hero-account,
+#hero nav ul {
+    display: none;
+}
+
+.hero-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 2rem;
+    margin-top: 4rem;
+    color: white;
+}
+
+.hero-buttons {
+    display: flex;
+    gap: 3rem;
+    justify-content: center;
+    margin-top: 3rem;
+}
+
+.hero-buttons button {
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 2rem;
+}
+
+.hero-buttons button:nth-child(1) {
+    color: #FF4D5B;
+}
+
+.hero-buttons button:nth-child(2) {
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
+}
+
+/* MAIN */
+#intro {
+    text-align: center;
+    padding: 0 1rem;
+}
+
+#intro h2 {
+    text-align: center;
+    margin-top: 6rem;
+}
+
+#intro h3 {
+    margin-top: 3rem;
+    margin-bottom: 1.5rem;
+}
+
+.intro-img {
+    margin-top: 3rem;
+}
+
+.intro-1,
+.intro-2 {
+    padding: 0 2rem;
+}
+
+#mobile {
+    background-image: url(../images/bg-pattern-circles.svg);
+    background-size: cover;
+    background-color: #3A3B59;
+    background-position: top;
+    border-radius: 0 5rem;
+    margin-top: 20rem;
+    margin-bottom: 4rem;
+    position: relative;
+    height: 70vh;
+}
+
+.mobile-text {
+    text-align: center;
+    color: white;
+    position: absolute;
+    top: 40%;
+}
+
+.mobile-text h3{
+    margin-bottom: 2rem;    
+}
+
+.mobile-img {
+    position: absolute;
+    top: -35%;
+    padding: 0 1rem;
+}
+
+#laptop{
+    text-align: center;
+    margin-bottom: 5rem;
+}
+
+.laptop-1,
+.laptop-2 {
+    padding: 0 2rem;
+}
+
+#laptop h3{
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+/* FOOTER */
+footer{
+    background-color: #24242C;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    gap:2rem;
+    padding: 5rem 0;
+    border-radius: 0 5rem 0 0 ;
+    text-align: center;
+}
+
+.footer-logo{
+    width: 20%;
+} 
+
+footer p{
+    margin-bottom: 2rem;
+}
+footer li{
+    margin-bottom: .5rem;
+}
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 578px) {
+
+    /* HEADER */
+
+    /* MAIN */
+
+    /* FOOTER */
+
+}
