--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,51 @@
 /* FONT */
+@font-face {
+    font-family: 'Overpass';
+    src: url(../font/Overpass/Overpass-VariableFont_wght.ttf) format('truetype');
+    font-weight: 300 600;
+}
 
+@font-face {
+    font-family: 'Ubuntu';
+    src: url(../font/Ubuntu/Ubuntu-Regular.ttf) format('truetype');
+    font-weight: 400 500 700;
+}
+
+body {
+    font-family: 'Overpass', sans-serif;
+}
+
+button {
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.font-footer-grey {
+    color: hsl(240, 2%, 79%);
+}
+
+.font-grey-body {
+    color: hsl(207, 13%, 34%);
+}
+
+.font-blue {
+    color: hsl(208, 49%, 24%);
+}
+
+.font-white {
+    color: hsl(0, 0%, 100%);
+}
+
+.font-bold {
+    font-weight: bold;
+}
+
+.font-transparent {
+    opacity: 70%;
+}
+
+.font-medium {
+    font-size: 2rem;
+}
 
 /* HEADER */
 #hero {
@@ -18,9 +64,9 @@
     padding: 5rem 2rem;
 }
 
-.hero-account,
-#hero nav ul {
+.hero-menu {
     display: none;
+    position: relative;
 }
 
 .hero-text {
@@ -33,9 +79,71 @@
     color: white;
 }
 
+#check {
+    display: none;
+}
+
+/* MENU MOBILE */
+#check:checked~label {
+    content: url(../images/icon-close.svg);
+}
+
+#check:checked~.hero-menu {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    align-items: center;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 85vw;
+    height: 55vh;
+    border-radius: .5rem;
+    text-align: center;
+}
+
+#check:checked~.hero-menu .menu-1 {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1.5em;
+}
+
+#check:checked~.hero-menu .menu-2 {
+    margin-bottom: 1rem;
+    background-color: #EFEFF1;
+    padding: 1rem 6rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: .5rem;
+    margin-bottom: 1.5rem;
+}
+
+#check:checked~.hero-menu .menu-3 {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-top: 1px solid hsl(207, 13%, 34%);
+}
+
+#check:checked~.hero-menu .menu-3 button:nth-child(1) { 
+    margin-top: 2rem;
+    background-color: transparent;
+    border:none;
+}
+#check:checked~.hero-menu .menu-3 button:nth-child(2) {
+    background-color: #FB6263;
+    border-radius: 2rem;
+    border: none;
+    color: white;
+    padding: .5rem 2rem;
+}
+
 .hero-buttons {
     display: flex;
-    gap: 3rem;
+    gap: 1rem;
     justify-content: center;
     margin-top: 3rem;
 }
@@ -97,11 +205,12 @@
     text-align: center;
     color: white;
     position: absolute;
-    top: 40%;
+    top: 35%;
+    padding: 2rem;
 }
 
-.mobile-text h3{
-    margin-bottom: 2rem;    
+.mobile-text h3 {
+    margin-bottom: 2rem;
 }
 
 .mobile-img {
@@ -110,7 +219,7 @@
     padding: 0 1rem;
 }
 
-#laptop{
+#laptop {
     text-align: center;
     margin-bottom: 5rem;
 }
@@ -120,32 +229,32 @@
     padding: 0 2rem;
 }
 
-#laptop h3{
+#laptop h3 {
     margin-top: 2rem;
     margin-bottom: 1.5rem;
 }
 
 /* FOOTER */
-footer{
+footer {
     background-color: #24242C;
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: white;
-    gap:2rem;
+    gap: 2rem;
     padding: 5rem 0;
-    border-radius: 0 5rem 0 0 ;
+    border-radius: 0 5rem 0 0;
     text-align: center;
 }
 
-.footer-logo{
+.footer-logo {
     width: 20%;
-} 
+}
 
-footer p{
+footer p {
     margin-bottom: 2rem;
 }
-footer li{
+
+footer li {
     margin-bottom: .5rem;
 }
 
