--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,11 +128,12 @@ button {
     border-top: 1px solid hsl(207, 13%, 34%);
 }
 
-#check:checked~.hero-menu .menu-3 button:nth-child(1) { 
+#check:checked~.hero-menu .menu-3 button:nth-child(1) {
     margin-top: 2rem;
     background-color: transparent;
-    border:none;
+    border: none;
 }
+
 #check:checked~.hero-menu .menu-3 button:nth-child(2) {
     background-color: #FB6263;
     border-radius: 2rem;
@@ -262,9 +263,103 @@ footer li {
 @media screen and (min-width: 578px) {
 
     /* HEADER */
+    #hero {
+        background-image: url(../images/bg-pattern-intro-desktop.svg);
+    }
+
+    .hero-bar {
+        margin: 0 5rem;
+        display: flex;
+    }
+
+    .hero-menu {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        justify-content: space-between;
+        margin-left: 4rem;
+        color: white;
+    }
+
+    .menu-1 {
+        display: flex;
+        gap: 3rem;
+    }
+
+    .menu-2 {
+        display: none;
+    }
+
+    .menu-3 button:nth-child(1) {
+        background-color: transparent;
+        border: none
+    }
+
+    .menu-3 button:nth-child(2) {
+        background-color: white;
+        border: none;
+        color: hsl(356, 100%, 66%);
+        border-radius: 2rem;
+    }
+
+    .hero-burger {
+        display: none;
+    }
 
     /* MAIN */
+    .intro-img {
+        display: flex;
+        flex-direction: row-reverse;
+        content: url(../images/illustration-editor-desktop.svg);
+        width: 45vw;
+        margin-left: auto;
+    }
+
+    .intro-1,
+    .intro-2 {
+        width: 40%;
+    }
+
+    #laptop {
+        display: flex;
+        align-items: center;
+    }
+
+    .laptop-img {
+        width: 100%;
+    }
+
+    .laptop-content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #mobile {
+        height: 30vh;
+        margin-bottom: 10rem;
+    }
+
+    .mobile-text {
+        position: static;
+        display: flex;
+        width: 50%;
+        flex-direction: column;
+        margin-left: auto;
+        text-align: left;
+    }
+
+    .mobile-img {
+        width: 40%;
+        top: 0;
+    }
 
     /* FOOTER */
+    footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 5rem 10rem;
+    }
 
 }
